[UI] Fix max number overflow

--- a/src/ui/pages/popup/ConfirmTx.css
+++ b/src/ui/pages/popup/ConfirmTx.css
@@ -136,6 +136,7 @@
 
 .page.confirm > .container > .details > .form > .next-block-fee img {
   height: 11px;
+  width: 11px;
 }
 
 .page.confirm > .container > .details > .form > .next-block-fee .plus {
